# build_in_cpp

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Changelog.md  DEPENDENCIES.md  DESIGN.md  LICENSE  README.md  TODO.md  codecov.yml  genindex.html  index.html  msvc-analysis.yml  objects.inv  search.html  searchindex.js
bootstrap/: CMakeLists.txt  config_default.toml  config_linux.toml  main.buildcc.cpp
bootstrap/config/: toolchain_gcc_win.toml  toolchain_linux_gcc.toml  toolchain_win_gcc.toml  toolchain_win_msvc.toml
bootstrap/include/bootstrap/: build_buildcc.h  build_cli11.h  build_flatbuffers.h  build_fmtlib.h  build_nlohmann_json.h  build_spdlog.h  build_taskflow.h  build_tl_optional.h  build_tpl.h  buildcc_cli11.h  buildcc_flatbuffers.h  buildcc_fmtlib.h  buildcc_spdlog.h  buildcc_taskflow.h  buildcc_tpl.h
bootstrap/src/: build_buildcc.cpp  build_cli11.cpp  build_flatbuffers.cpp  build_fmtlib.cpp  build_nlohmann_json.cpp  build_spdlog.cpp  build_taskflow.cpp  build_tl_optional.cpp  build_tpl.cpp  buildcc_cli11.cpp  buildcc_flatbuffers.cpp  buildcc_fmtlib.cpp  buildcc_spdlog.cpp  buildcc_taskflow.cpp  buildcc_tpl.cpp
buildcc/: .gitignore  CMakeLists.txt  buildcc.h
buildcc/fbs/: fbs_utils.h  target.fbs
buildcc/include/: args.h  buildcc.h  fatal_assert.h  file.h  path.h  register.h  schema_loader.h  target.h  target_type.h
buildcc/include/internal/: fatal_assert.h  fbs_loader.h  fbs_utils.h  path.h  schema_loader.h
buildcc/lib/args/: CMakeLists.txt
buildcc/lib/args/include/: args.h  register.h
buildcc/lib/args/mock/: callbacks.cpp  parse.cpp  tasks.cpp  test_args.h
buildcc/lib/args/src/: args.cpp  callbacks.cpp  parse.cpp  register.cpp  tasks.cpp
buildcc/lib/args/test/: test_args.cpp  test_persistent_storage.cpp  test_register.cpp
buildcc/lib/base_toolchain/: CMakeLists.txt  toolchain.h
buildcc/lib/command/: CMakeLists.txt
buildcc/lib/command/mock/: execute.cpp  expect_command.h  mock_command_copier.h
buildcc/lib/command/src/: command.cpp  execute.cpp
buildcc/lib/command/test/: test_command.cpp
buildcc/lib/env/: CMakeLists.txt  env.cpp  env.h
buildcc/lib/env/include/: assert_fatal.h  env.h  host_os.h  logging.h
buildcc/lib/env/mock/: assert_fatal.cpp  execute.cpp  logging.cpp
buildcc/lib/env/src/: assert_fatal.cpp  command.cpp  env.cpp  execute.cpp  logging.cpp  storage.cpp  task_state.cpp
buildcc/lib/env/test/: test_assert_fatal.cpp  test_command.cpp  test_env_util.cpp  test_static_project.cpp  test_storage.cpp  test_task_state.cpp
buildcc/lib/toolchain/: CMakeLists.txt  toolchain.cpp  toolchain.h
buildcc/lib/toolchain/test/: test_toolchain_config.cpp  test_toolchain_find.cpp  (+2 more)
buildcc/mock/: CMakeLists.txt
buildcc/plugin/: CMakeLists.txt  clang_compile_commands.h
buildcc/plugins/: CMakeLists.txt  clang_compile_commands.cpp  clang_compile_commands.h
buildcc/plugins/src/: buildcc_find.cpp  clang_compile_commands.cpp
buildcc/plugins/test/: test_buildcc_find.cpp
buildcc/schema/: CMakeLists.txt  custom_generator.fbs  generator.fbs  path.fbs  target.fbs
buildcc/schema/cmake/: schema.cmake  schema_generate.cmake
buildcc/schema/src/: custom_generator_serialization.cpp  generator_serialization.cpp  target_serialization.cpp
buildcc/schema/test/: test_custom_generator_serialization.cpp  test_path_schema.cpp  test_target_serialization.cpp
buildcc/src/: args.cpp  fbs_loader.cpp  fbs_utils.cpp  register.cpp  schema_loader.cpp  target.cpp
buildcc/targets/: CMakeLists.txt  target_constants.h  target_gcc.h  target_generic.h  target_msvc.h  target_utils.h
buildcc/targets/gcc/: CMakeLists.txt  dynamic_target.cpp  dynamic_target.h  dynamic_target_gcc.cpp  dynamic_target_gcc.h  executable_target.h  executable_target_gcc.h  static_target.cpp  static_target.h  static_target_gcc.cpp  static_target_gcc.h
buildcc/targets/msvc/: CMakeLists.txt  dynamic_target_msvc.cpp  dynamic_target_msvc.h  executable_target_msvc.cpp  executable_target_msvc.h  static_target_msvc.cpp  static_target_msvc.h
buildcc/test/: CMakeLists.txt
buildcc/test/fatal_assert/: CMakeLists.txt  test_fatal_assert.cpp
buildcc/test/fbs_loader/: CMakeLists.txt  test_fbs_loader.cpp
buildcc/test/fbs_utils/: CMakeLists.txt  test_fbs_utils.cpp
buildcc/test/path/: test_path.cpp
buildcc/test/schema_loader/: CMakeLists.txt  test_schema_loader.cpp
buildcc/toolchains/: CMakeLists.txt  toolchain_gcc.h  toolchain_msvc.h
buildcc/toolchains/src/: toolchain_aggregate.cpp  toolchain_gcc.cpp  toolchain_infos.cpp  toolchain_msvc.cpp
buildcc/toolchains/test/: test_toolchain_specialized.cpp
buildexe/: CMakeLists.txt  buildexe.cpp
buildexe/example_configs/: sm_simple.toml  sm_simple_win.toml  tpl_linux.toml  tpl_win.toml
buildexe/include/buildexe/: args_setup.h  build_env_home.h  build_env_setup.h  buildcc_setup.h  toolchain_setup.h
buildexe/src/: args_setup.cpp  build_env_home.cpp  build_env_setup.cpp  buildcc_setup.cpp  toolchain_setup.cpp
example/AfterInstall/: CMakeLists.txt  README.md  build.cpp
example/Simple/: CMakeLists.txt  README.md  Simple.exe.json  build.cpp  main.cpp
example/StaticLib/: CMakeLists.txt  build.cpp
example/gcc/AfterInstall/: CMakeLists.txt  build.cpp
example/hybrid/: .gitignore  CMakeLists.txt  build.cpp  build.toml
example/hybrid/custom_target/: .gitignore  CMakeLists.txt  build.main.cpp  build_linux.toml  build_win.toml  main.cpp
example/hybrid/dep_chaining/: CMakeLists.txt  build.cpp  build_linux.toml  build_win.toml
example/hybrid/external_lib/: CMakeLists.txt  README.md  build.main.cpp
example/hybrid/foolib/: CMakeLists.txt  build.foo.cpp  build.foo.h  build.main.cpp
example/hybrid/generic/: .gitignore  CMakeLists.txt  build.cpp  build_generic.toml
example/hybrid/pch/: CMakeLists.txt  build.cpp
example/hybrid/simple/: CMakeLists.txt  build.cpp
example/hybrid/single/: CMakeLists.txt  README.md  build.cpp  build.toml  compile.toml  immediate.toml
example/hybrid/target_info/: CMakeLists.txt  build.cpp  build_linux.toml
example/msvc/Executable/: CMakeLists.txt  build.cpp
(+293 files in other folders)
